<resources>
    <!--  app名称   -->
    <string name="app_name">MBox</string>

    <string name="about">基于TVBox开发，代码开源，不收集或上传任何数据。
        \n软件只提供展示功能，不参与任何订阅源的制作、收集和发布。
        \n开发者不对任何订阅内容负责。
        \n仅用于个人学习和参考，请勿传播，安装后请于24小时内删除。
        </string>

    <string name="subs_use_tip">
        本软件仅用于学习和参考，不建议使用任何订阅。
        \n订阅(主要)：名称仅用于记忆/区分，地址分为网络和本地。
        \n多线路：可解析出多条订阅。
        \n多仓库：可解析出多个多线路，按需导入。
        \n为降低操作门槛，目前不论多线路/多仓，都会展现成单条订阅格式。
             </string>

    <string name="subs_tip">
        本应用不参与任何订阅源的制作、收集和发布，开发者不对任何订阅内容负责。
        \n请不要相信任何订阅中以任何形势出现的任何广告。
        \n本应用不采集任何用户信息，如果您发现任何违规订阅，请立即删除。
             </string>

    <string-array name="doh_name">
        <item>关闭</item>
        <item>腾讯</item>
        <item>阿里</item>
        <item>360</item>
        <item>Google</item>
        <item>AdGuard</item>
        <item>Quad9</item>
    </string-array>

    <string-array name="doh_url">
        <item />
        <item>https://doh.pub/dns-query</item>
        <item>https://dns.alidns.com/dns-query</item>
        <item>https://doh.360.cn/dns-query</item>
        <item>https://dns.google/dns-query</item>
        <item>https://dns.adguard.com/dns-query</item>
        <item>https://dns.quad9.net/dns-query</item>
    </string-array>

    <string-array name="api">
        <item />
    </string-array>

    <!-- Material Symbols 图标字符串 -->
    <!-- 导航图标 -->
    <string name="ms_home"></string>
    <string name="ms_search"></string>
    <string name="ms_settings"></string>
    <string name="ms_person"></string>
    <string name="ms_favorite"></string>
    <string name="ms_history"></string>

    <!-- 媒体控制图标 -->
    <string name="ms_play_arrow"></string>
    <string name="ms_pause"></string>
    <string name="ms_stop"></string>
    <string name="ms_skip_next"></string>
    <string name="ms_skip_previous"></string>
    <string name="ms_fast_forward"></string>
    <string name="ms_fast_rewind"></string>
    <string name="ms_volume_up"></string>
    <string name="ms_volume_down"></string>
    <string name="ms_volume_off"></string>
    <string name="ms_closed_caption"></string>

    <!-- 操作图标 -->
    <string name="ms_add"></string>
    <string name="ms_remove"></string>
    <string name="ms_delete"></string>
    <string name="ms_edit"></string>
    <string name="ms_share"></string>
    <string name="ms_download"></string>
    <string name="ms_upload"></string>
    <string name="ms_refresh"></string>
    <string name="ms_close"></string>
    <string name="ms_check"></string>
    <string name="ms_info"></string>
    <string name="ms_warning"></string>
    <string name="ms_error"></string>

    <!-- 界面元素图标 -->
    <string name="ms_menu"></string>
    <string name="ms_more_vert"></string>
    <string name="ms_more_horiz"></string>
    <string name="ms_arrow_back"></string>
    <string name="ms_arrow_forward"></string>
    <string name="ms_arrow_up"></string>
    <string name="ms_arrow_down"></string>
    <string name="ms_expand_less"></string>
    <string name="ms_expand_more"></string>
    <string name="ms_filter_list"></string>
    <string name="ms_sort"></string>

    <!-- 特殊功能图标 -->
    <string name="ms_picture_in_picture"></string>
    <string name="ms_cast"></string>
    <string name="ms_fullscreen"></string>
    <string name="ms_fullscreen_exit"></string>
    <string name="ms_subtitles"></string>
    <string name="ms_playlist_play"></string>
    <string name="ms_playlist_add"></string>
    <string name="ms_folder"></string>
    <string name="ms_file"></string>
    <string name="ms_cloud"></string>
    <string name="ms_cloud_download"></string>
</resources>